my-quiz-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-quiz-ui
  namespace: my-quiz-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-quiz-ui
  template:
    metadata:
      labels:
        app: my-quiz-ui
    spec:
      containers:
      - name: my-quiz-ui
        image: adham999/my-quiz-ui:latest
        ports:
        - containerPort: 80
