file.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quiz-app

---

apiVersion: v1
kind: Service
metadata:
  name: quiz-ui-service
  namespace: quiz-app
spec:
  selector:
    app: quiz-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-ui-deployment
  namespace: quiz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-ui
  template:
    metadata:
      labels:
        app: quiz-ui
    spec:
      containers:
        - name: my-quiz-ui
          image: adham999/my-quiz-ui:latest
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: quiz-api-service
  namespace: quiz-app
spec:
  selector:
    app: quiz-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-api-deployment
  namespace: quiz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-api
  template:
    metadata:
      labels:
        app: quiz-api
    spec:
      containers:
        - name: my-quiz-api
          image: adham999/my-quiz-api:latest
          ports:
            - containerPort: 5000
