my-quiz-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: my-quiz-namespace
spec:
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
