my-quiz-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-quiz-ui
  namespace: my-quiz-namespace
spec:
  selector:
    app: my-quiz-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
